--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,10 @@
             android:name=".sample.SampleActivity"
             android:label="示例"
             android:screenOrientation="portrait"/>
+        <activity
+            android:name=".decoration.SampleActivity"
+            android:label="示例"
+            android:screenOrientation="portrait"/>
     </application>
 
 </manifest>
