--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,7 +11,7 @@ android {
     buildToolsVersion '28.0.3'
     defaultConfig {
         applicationId "com.ccooy.expandablerecyclerview"
-        minSdkVersion 14
+        minSdkVersion 17
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
@@ -43,6 +43,12 @@ dependencies {
     implementation 'com.google.android.material:material:1.1.0'
 
     implementation 'com.drakeet.multitype:multitype:4.2.0'
+    implementation 'com.oushangfeng:PinnedSectionItemDecoration:1.3.2-androidx'
+    implementation 'com.github.anzaizai:EasyRefreshLayout:1.3.1'
+    implementation 'com.google.code.gson:gson:2.8.5'
+    implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.47'
+    implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.19'
+    implementation 'com.lcodecorex:tkrefreshlayout:1.0.7'
 
     //retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.6.0'
